# wavesleuth-devito

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
acq_compare/runs/: acquisition_comparison.json  crossfire_obs.npz  crossfire_recon.json  left-right_obs.npz  left-right_recon.json  ring_obs.npz  ring_recon.json  single_obs.npz  single_recon.json  top-only_obs.npz  top-only_recon.json
acq_compare/worlds/: crossfire.json  left-right.json  ring.json  single.json  (+1 more)
challenge_easy/: challenge_summary.json
challenge_limited/: challenge_summary.json
challenge_noisy/: challenge_summary.json
challenge_rv/: challenge_summary.json
challenge_rv_staged/: challenge_summary.json
docs/: SCHEMA.md
examples/: quickstart.md  v0_2_workflow.md  v0_3_workflow.md  v0_6_workflow.md  v0_7_workflow.md  v0_8_workflow.md  v0_9_release_hardening.md
figures/: README.md
reports/: circle_noisy_report.html
tests/: test_geometry.py  test_inversion.py  test_io.py  test_v02_features.py  test_v031_cleanup.py  test_v03_features.py  test_v04_staged_search.py  test_v051_leaderboard_cleanup.py  test_v051_report_cleanup.py  test_v051_uncertainty_cleanup.py  test_v05_worlds.py  test_v061_blind_integrity.py  test_v06_blind_challenges.py  test_v071_active_cleanup.py  test_v072_active_shape_compat.py  test_v07_active.py  test_v081_version_cleanup.py  test_v082_mask_challenge_calibration.py  test_v083_mask_challenge_objective.py  test_v08_cli_surface.py  test_v08_mask_blocks.py  test_v09_release_hardening.py  test_world.py
worlds/: README.md
(+97 files in other folders)
